--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,8 @@
 {
-  "extends": ["next", "next/core-web-vitals", "@rocketseat/eslint-config/react"],
+  "extends": ["next/core-web-vitals", "@rocketseat/eslint-config/react"],
   "rules": {
   "camelcase": "off",
   "no-unused-vars": "off",
-  "no-undef": "off",
-  "react/no-unescaped-entities": "off",
-  "@next/next/no-page-custom-font": "off"
+  "no-undef": "off"
 }
 }
